--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -102,13 +102,23 @@ bookmarks, colorlinks, breaklinks,
 % \section*{Areas of specialization}
 %  Computational modeling • Cultural evolution • Social influence 
 
+%\hrule
+\section*{Education}
+\noindent
+  \years{2021}\textsc{PhD}, Cognitive and Information 
+      Sciences, \emph{University of California, Merced}. \\Chair: Paul E.
+      Smaldino. \\
+  \years{2012}\textsc{MS}, Applied Physics, \emph{Rice University}\\
+  \years{2008}\textsc{BS}, Physics, Mathematics \emph{Syracuse University}
+
+
 %%\hrule
 \section*{Professional Experience}
 \noindent
 \years{2014-2016} Research Software Developer II, 
         \emph{Northwest Knowledge Network, University of Idaho}, Moscow, ID, USA. Led development of the ``Virtual Watershed'' modeling and data analysis \&
-        management system and associated tools (see Volk \& Turner, 2019, and 
-        Gregory, et al., 2020, listed below). 
+        management system and associated tools (see \hyperlink{volkturner}{Volk \& Turner, 2019}, and 
+        \hyperlink{vwpaper}{Gregory, et al., 2020}, listed below). 
         Integrated contributions of faculty, graduate students,
         and other professional software developers. \\
 
@@ -120,17 +130,8 @@ bookmarks, colorlinks, breaklinks,
       Developed novel approaches and applied best-practices to large-scale
       economic forecasts.
 
-%\hrule
-\section*{Education}
-\noindent
-  \years{2021}\textsc{PhD}, Cognitive and Information 
-      Sciences, \emph{University of California, Merced}. \\Chair: Paul E.
-      Smaldino. \\
-  \years{2012}\textsc{MS}, Applied Physics, \emph{Rice University}\\
-  \years{2008}\textsc{BS}, Physics, Mathematics \emph{Syracuse University}
-
 % \hrule
-\section*{Grants, honors, and awards}
+\section*{Grants, honors and awards}
 \noindent
 \years{2023}Cognitive Science Society Conference Diversity \& Social Inequality Award \lurl{https://cognitivesciencesociety.org/conference-awards/} \\
 \years{2022-2024}Pandemic Preparedness Hub Postdoctoral Fellowship \lurl{https://pandemichub.stanford.edu/fellows/}\\
@@ -148,10 +149,10 @@ Universidade Federal de Santa Catarina, Santa Catarina, Brazil
 
 \setlength{\parskip}{10pt}
 
-  \textbf{Turner MA}, Singleton AL, Harris MJ, Augusto Lopez C, Harryman I,
+  \hypertarget{ptblink}{\textbf{Turner MA}}, Singleton AL, Harris MJ, Augusto Lopez C, Harryman I,
     Arthur RF, Muraida C, Jones JH (2023). Minority-group incubators and majority-group reservoirs
-    support the diffusion of climate change adaptations. \emph{Forthcoming in} Phil. Trans. B \emph{theme issue, ``Climate
-    change adaptation needs a science of culture''.} \lurl{https://osf.io/preprints/socarxiv/28eaj/}
+    support the diffusion of climate change adaptations. \emph{Philosophical Transactions of the Royal Society: Part B.} Theme: ``Climate
+    change adaptation needs a science of culture''. \lurl{https://royalsocietypublishing.org/doi/full/10.1098/rstb.2022.0401}
 
   \textbf{Turner MA}, Moya C, Smaldino PE, \& Jones JH (2023). The Form of
   Uncertainty Affects Selection for Social Learning. \emph{Human Evolutionary Sciences}.
@@ -172,12 +173,12 @@ Universidade Federal de Santa Catarina, Santa Catarina, Brazil
 
   \textbf{Turner MA} \& Smaldino PE (2020). Stubborn Extremism as a Potential Pathway to Group Polarization. \emph{Proceedings of the 42$^{\,nd}$ Annual Conference of the Cognitive Science Society}. \lurl{https://cogsci.mindmodeling.org/2020/papers/0153/}
 
-    Gregory A, \ldots, \textbf{Turner MA} (2020). Efficient Model-data Integration for Flexible Modeling, Parameter Analysis \& Visualization, and Data Management. \emph{Frontiers in Water}. 
+  \hypertarget{vwpaper}{Gregory A}, \ldots, \textbf{Turner MA} (2020). Efficient Model-data Integration for Flexible Modeling, Parameter Analysis \& Visualization, and Data Management. \emph{Frontiers in Water}. 
     \lurl{https://doi.org/10.3389/frwa.2020.00002}
 
     Smaldino PE, \textbf{Turner MA}, Contreras Kallens PA (2019). Open Science and Modified Funding Lotteries Can Impede the Natural Selection of Bad Science. \emph{Royal Society Open Science}, 6(8), 191249. \lurl{https://doi.org/10.1098/rsos.191249}
 
-    Volk JM \& \textbf{Turner MA} (2019). PRMS-Python: A Python framework for programmatic PRMS modeling and access to its data structures. \emph{Environmental Modelling and Software}, 114, 152–165. \lurl{https://doi.org/10.1016/j.envsoft.2019.01.006}
+    \hypertarget{volkturner}{Volk JM} \& \textbf{Turner MA} (2019). PRMS-Python: A Python framework for programmatic PRMS modeling and access to its data structures. \emph{Environmental Modelling and Software}, 114, 152–165. \lurl{https://doi.org/10.1016/j.envsoft.2019.01.006}
 
     \textbf{Turner MA} \& Smaldino PE (2018). Paths to Polarization: How Extreme Views,
     Miscommunication, and Random Chance Drive Opinion Dynamics. \emph{Complexity}. \lurl{https://doi.org/10.1155/2018/2740959}
@@ -193,7 +194,7 @@ Universidade Federal de Santa Catarina, Santa Catarina, Brazil
     Quantum and electromagnetic propagation with the conjugate symmetric
     Lanczos method. \emph{Journal of Chemical Physics}, 128.
 
-    \subsection{Working papers and preprints}
+    % \subsection{Working papers and preprints}
 
 
 
@@ -216,9 +217,9 @@ Texas. \lurl{https://www.researchgate.net/publication/274720620_Experimental_and
 
 \subsection{Code and tools}
 
-\textbf{Turner MA}. \texttt{SustainableCBA}: Social learning of adaptive behaviors in a
+\textbf{Turner MA}. \texttt{MinMaj-Adaptation-Diffusion}: Social learning of adaptive behaviors in a
 metapopulation with a minority and majority group.
-\lurl{https://github.com/eehh-stanford/SustainableCBA}
+\lurl{https://github.com/eehh-stanford/MinMaj-Adaptation-Diffusion}
 
 \textbf{Turner MA}. \texttt{UncMod}: Model for analyzing social learning evolution in uncertain
 environments. \lurl{https://github.com/mt-digital/UncMod}
@@ -226,8 +227,8 @@ environments. \lurl{https://github.com/mt-digital/UncMod}
 \textbf{Turner MA}. \texttt{iatv}: Python API for interacting with the Internet
 Archive's TV News Archive. \lurl{https://github.com/mt-digital/iatv}
 
-\textbf{Turner MA}. \texttt{iatv-research.com}: free, public web interface to download
-CSV-formatted Internet Archive TV News Archive search results. \lurl{http://iatv-research.com}
+% \textbf{Turner MA}. \texttt{iatv-research.com}: free, public web interface to download
+% CSV-formatted Internet Archive TV News Archive search results. \lurl{http://iatv-research.com}
 
 \textbf{Turner MA} \& Volk JM. \texttt{PRMS-Python}: provides intuitive
 structures and functions for implementing and managing common modeling
@@ -236,9 +237,14 @@ model. \lurl{https://prms-python.github.io/PRMS-Python/build/html/index.html}
 
 \subsection{Conference talks}
 
-    \textbf{Turner MA} Moya C, Smaldino PE, \& Jones JH (2023, September). \textbf{Turner MA}, Singleton AL, Harris MJ, Augusto Lopez C, Harryman I,
+    \textbf{Turner MA}, Singleton AL, Harris MJ, Augusto Lopez C, Harryman I,
     Arthur RF, Muraida C, Jones JH (2023). Minority-group incubators and majority-group reservoirs for promoting the diffusion of climate change and public health adaptations. 45th Annual Meeting of the Cognitive Science Society.
     Sydney, New South Wales, Australia.
+
+    \textbf{Turner MA}, Singleton AL, Harris MJ, Augusto Lopez C, Harryman I,
+    Arthur RF, Muraida C, Jones JH (2023). Minority-group incubators and majority-group reservoirs for promoting the diffusion of climate change and
+    public health adaptations. American Association of Biological Anthropology
+    Annual Meeting. Reno, Nevada, USA.
 
     \textbf{Turner MA} Moya C, Smaldino PE, \& Jones JH (2022, September). Some forms of
     uncertainty may suppress the evolution of social learning. 4th Cultural Evolution Society
@@ -254,10 +260,10 @@ model. \lurl{https://prms-python.github.io/PRMS-Python/build/html/index.html}
     Social Science. Poster. Chicago, USA.
 
     % \textbf{Turner MA}, (2021, March) \emph{Theory and practice of open science solutions}. Presented as a two-day lecture and workshop to Heather Bortfeld's graduate introductory psychology class. I presented how open science works (pre-registration, accessible data management, open data, open code, etc.) and how it can help ease the various crises (e.g. replication, theory, generalizability crises) faced by psychological research.
- \textbf{Turner MA} Moya C, Smaldino PE, \& Jones JH (2022, September). How
- environmental uncertainty and correlated payoffs drive the evolution of social
- learning. American Association of Biological Anthropologists Conference 2022.
- Online.
+    \textbf{Turner MA} Moya C, Smaldino PE, \& Jones JH (2022, September). How
+    environmental uncertainty and correlated payoffs drive the evolution of social
+    learning. American Association of Biological Anthropologists Conference 2022.
+    Online.
 
     \textbf{Turner MA}, (2021, February) Statistical Models of Group Polarization: Putting Theory into Practice. Society for Personality and Social Psychology. Poster. Online.
 
@@ -267,27 +273,27 @@ model. \lurl{https://prms-python.github.io/PRMS-Python/build/html/index.html}
 
    \textbf{Turner MA} \& Smaldino PE, (2020, July) Group polarization via stubborn extremism. 6th International Conference on Computational Social Science. Online.
 
-Kello C, \textbf{Turner MA}, Alviar C, (2019, August) A Statistical Model of
-Hierarchical Temporal Structure. The Guy Van Orden UConn Workshop on Cognition
-and Dynamics, XIV. Univeristy of Connecticut.
+  Kello C, \textbf{Turner MA}, Alviar C, (2019, August) A Statistical Model of
+  Hierarchical Temporal Structure. The Guy Van Orden UConn Workshop on Cognition
+  and Dynamics, XIV. Univeristy of Connecticut.
 
-\textbf{Turner MA}, Bernacchi L, Maglio PP, Matlock T, (2018, December) How regulations
-strangle business: Lessons for science communication based on violence metaphors in the 2016
-presidential election. eLightning talk at the American Geophysical Union meeting in Washington,
-D.C. \lurl{https://agu.confex.com/agu/fm18/meetingapp.cgi/Paper/451955}
+  \textbf{Turner MA}, Bernacchi L, Maglio PP, Matlock T, (2018, December) How regulations
+  strangle business: Lessons for science communication based on violence metaphors in the 2016
+  presidential election. eLightning talk at the American Geophysical Union meeting in Washington,
+  D.C. \lurl{https://agu.confex.com/agu/fm18/meetingapp.cgi/Paper/451955}
 
-\textbf{Turner MA} \& Smaldino PE, (2018, October) Cultural polarization depends on whom we learn from and how well we communicate. Lightning talk during plenary session presented at the Cultural Evolution Society meeting in Tempe, Arizona.
+  \textbf{Turner MA} \& Smaldino PE, (2018, October) Cultural polarization depends on whom we learn from and how well we communicate. Lightning talk during plenary session presented at the Cultural Evolution Society meeting in Tempe, Arizona.
 
-\textbf{Turner MA}, Maglio PP, Matlock, T, (2017, July) A corpus analysis of the dynamics of violence metaphors in cable news programming on US politics. Talk presented at the 14th International Cognitive Linguistics Conference in Tartu, Estonia.
+  \textbf{Turner MA}, Maglio PP, Matlock, T, (2017, July) A corpus analysis of the dynamics of violence metaphors in cable news programming on US politics. Talk presented at the 14th International Cognitive Linguistics Conference in Tartu, Estonia.
 
-\textbf{Turner MA}, Bernacchi, L, Maglio, PP, Matlock, T, (2017, June) Breaking
-news: the EPA is strangling the economy! An analysis of metaphorical violence
-and US environmental regulators. Talk presented at the 2017 Conference on
-Communication and the Environment in Washington, DC.
+  \textbf{Turner MA}, Bernacchi, L, Maglio, PP, Matlock, T, (2017, June) Breaking
+  news: the EPA is strangling the economy! An analysis of metaphorical violence
+  and US environmental regulators. Talk presented at the 2017 Conference on
+  Communication and the Environment in Washington, DC.
 
-\textbf{Turner MA}, Miller, SJ, Gregory, AE, Cadol, DD, Stone, MC, Sheneman, L, (2016, December). Coupled RipCAS-DFLOW (CoRD) Software and Data Management System for Reproducible Floodplain Vegetation Succession Modeling. Poster presented at the American Geophysical Society meeting in San Francisco, CA.
+  \textbf{Turner MA}, Miller, SJ, Gregory, AE, Cadol, DD, Stone, MC, Sheneman, L, (2016, December). Coupled RipCAS-DFLOW (CoRD) Software and Data Management System for Reproducible Floodplain Vegetation Succession Modeling. Poster presented at the American Geophysical Society meeting in San Francisco, CA.
 
-\textbf{Turner MA}, Koskela R, Vardigan M, Dubin D, Sheneman L. (2015, September). Linked Interdisciplinary Data Discovery. Poster presented at the 6th RDA Plenary in Paris, France. 
+  \textbf{Turner MA}, Koskela R, Vardigan M, Dubin D, Sheneman L. (2015, September). Linked Interdisciplinary Data Discovery. Poster presented at the 6th RDA Plenary in Paris, France. 
 
 
 \subsection{White papers}
@@ -327,10 +333,14 @@ Communication and the Environment in Washington, DC.
 
 \end{itemize}
 
- \section*{Mentorship}
+\vspace{-1em}
+ \subsection*{Mentorship}
 
 \begin{itemize}
-  \item Mentored and supervised several UC Merced students in 2017 
+  \item Mentored a team of graduate student co-authors developing the paper,
+    ``Minority-group incubators and majority-group reservoirs support the diffusion
+    of climate change adaptations,'' (2023) in \emph{Phil. Trans. B} (see \hyperlink{ptblink}{above}).
+  \item Mentored and supervised several UC Merced students during my dissertation work
     who contributed to
     Metacorps, the web application I developed for annotating metaphor found
     on cable news. Students were Gloria Quintana, Amy Tang, Sebastian Lavenant, Isabella Methot,
@@ -342,13 +352,16 @@ Communication and the Environment in Washington, DC.
     one semester of research at Rice University, 2011.
 \end{itemize}
 %\hrule
-\section*{Reviewer service}
+
+\vspace{-1em}
+\subsection*{Reviewer service}
 
 \emph{Psychological Review} $~\cdot~$ \emph{Journal of Matehematical Sociology} $~\cdot~$ \\
 \emph{Evolutionary Human Sciences} $~\cdot~$ \emph{Journal of Artificial Societies and Social Simulation} $~\cdot~$ \emph{Cognitive Processing} $~\cdot~$ \emph{Society for Personality and Social Psychology Annual Convention} $~\cdot~$ \emph{Cognitive Systems Research}
 
 %\vspace{1cm}
-\section*{Skills}
+\vspace{-1em}
+\subsection*{Skills}
 
   \textbf{Programming languages}: Julia; Python; R; NetLogo; bash/shell scripting; 
   HTML/CSS/JavaScript; Java; D; MATLAB; Mathematica; Scala; Clojure.
@@ -361,7 +374,7 @@ Communication and the Environment in Washington, DC.
   \textbf{Languages:} English; some experience with Portuguese, French,
   and Spanish.
 
-\vfill
+% \vfill
 \hrulefill
 
 \begin{center}
