added Kello paper

--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -158,6 +158,9 @@ Universidade Federal de Santa Catarina, Santa Catarina, Brazil
   Uncertainty Affects Selection for Social Learning. \emph{Human Evolutionary Sciences}.
   \lurl{https://www.cambridge.org/core/journals/evolutionary-human-sciences/article/form-of-uncertainty-affects-selection-for-social-learning/18B581D90A78CE094194C24C59757F5B}
 
+  Kello CT, Bhat H, \textbf{Turner MA}, Alviar C (\emph{revised, under review}). Hierarchical Process Timescales and Nested Process
+  Composition.
+
   \textbf{Turner MA}, Moya C, Smaldino PE, \& Jones JH (2022). Some
   forms of uncertainty may suppress the evolution of social
   learning. \emph{Proceedings of the 44$^{\,th}$ Annual Conference
