updated with latest pubs and portuguese skill

--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -148,6 +148,11 @@ Universidade Federal de Santa Catarina, Santa Catarina, Brazil
 \subsection{Journal articles}
 
 \setlength{\parskip}{10pt}
+  Dayer A, Aswamenakul C, \textbf{Turner MA}, Nicolay S, Wang E, Shurik K, \& Holbrook C (2024). Intuitive moral bias favors the religiously
+  faithful. \emph{Scientific Reports}, 1–7. \lurl{https://doi.org/10.1038/s41598-024-67960-4}
+
+  Kello CT, Bhat H, \textbf{Turner MA}, Alviar C (\emph{under review}). Hierarchical Process Timescales and Nested Process
+  Composition.
 
   \hypertarget{ptblink}{\textbf{Turner MA}}, Singleton AL, Harris MJ, Augusto Lopez C, Harryman I,
     Arthur RF, Muraida C, Jones JH (2023). Minority-group incubators and majority-group reservoirs
@@ -157,9 +162,6 @@ Universidade Federal de Santa Catarina, Santa Catarina, Brazil
   \textbf{Turner MA}, Moya C, Smaldino PE, \& Jones JH (2023). The Form of
   Uncertainty Affects Selection for Social Learning. \emph{Human Evolutionary Sciences}.
   \lurl{https://www.cambridge.org/core/journals/evolutionary-human-sciences/article/form-of-uncertainty-affects-selection-for-social-learning/18B581D90A78CE094194C24C59757F5B}
-
-  Kello CT, Bhat H, \textbf{Turner MA}, Alviar C (\emph{revised, under review}). Hierarchical Process Timescales and Nested Process
-  Composition.
 
   \textbf{Turner MA}, Moya C, Smaldino PE, \& Jones JH (2022). Some
   forms of uncertainty may suppress the evolution of social
@@ -374,8 +376,7 @@ model. \lurl{https://prms-python.github.io/PRMS-Python/build/html/index.html}
   Git \& GitHub; Web servers; \LaTeX; MongoDB, SQL, and other databases; 
   REST APIs and API development.
 
-  \textbf{Languages:} English; some experience with Portuguese, French,
-  and Spanish.
+  \textbf{Languages:} Portuguese; some experience with French and Spanish.
 
 % \vfill
 \hrulefill
