minor updates, pre-merge

--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -96,7 +96,7 @@ bookmarks, colorlinks, breaklinks,
 
 % \hrule
 \section*{Current position}
-\years{2021-} \emph{Postdoctoral scholar}, Stanford University, USA
+\years{2021-} \emph{Postdoctoral scholar}, Pandemic Preparedness Hub, Stanford University, USA
 
 %%\hrule
 % \section*{Areas of specialization}
@@ -135,6 +135,8 @@ bookmarks, colorlinks, breaklinks,
 \noindent
 \years{2023}Cognitive Science Society Conference Diversity \& Social Inequality Award \lurl{https://cognitivesciencesociety.org/conference-awards/} \\
 \years{2022-2024}Pandemic Preparedness Hub Postdoctoral Fellowship \lurl{https://pandemichub.stanford.edu/fellows/}\\
+\years{2022}Hoffman-Yee Seed Grant for applying SciML to social science and
+epidemiology \\
 \years{2020-2021}NSF Research Training (NRT) Program in Intelligent Adaptive
 Systems \lurl{https://nrt-ias.ucmerced.edu/content/matthew-turner} \\
 \years{2015} Research Data Alliance Early Career Fellow 
@@ -371,7 +373,7 @@ model. \lurl{https://prms-python.github.io/PRMS-Python/build/html/index.html}
   Git \& GitHub; Web servers; \LaTeX; MongoDB, SQL, and other databases; 
   REST APIs and API development.
 
-  \textbf{Languages:} English; some experience with Portuguese, French,
+  \textbf{Languages:} Some experience with Portuguese, French,
   and Spanish.
 
 % \vfill
