--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -116,13 +116,13 @@ Developed from scratch to introduce social influence theories
 and models that can be used to predict opinion change over time or to rigorously 
 fit statistical models to empirical data. \lurl{https://explorecourses.stanford.edu/m_search?filter-coursestatus-Active=on&page=0&catalog=&q=EBS+179}
 
-\years{Spring '25}\emph{Agent-based Modeling (for Sustainability)}.
+\years{Spring '25 and '26}\emph{Agent-based Modeling (for Sustainability)}.
 \textbf{Dept. of Environmental Social Sciences, Stanford University.}
 Developed from scratch to introduce students to the computational technique
 of agent-based modeling, used extensively in models of social behavior for
 promoting sustainable practices and behavior. \lurl{https://explorecourses.stanford.edu/m_search?filter-coursestatus-Active=on&page=0&catalog=&q=EBS+182}
 
-\years{Winter '25}\emph{Computational Social Science for Sustainability}.
+\years{Winter '25 and '26}\emph{Computational Social Science for Sustainability}.
 \textbf{Dept. of Environmental Social Sciences, Stanford University.}
 Developed from scratch to introduce quantitative social science theories
 and models. To support this, I created a novel framework that consolidates
