cleanups and updates

--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -80,11 +80,10 @@ bookmarks, colorlinks, breaklinks,
   Stanford University 
 \end{minipage} \hspace{4em}
 \begin{minipage}[t]{0.4\textwidth}
-  \Letter\quad\href{mailto:maturner@stanford.edu}{maturner@stanford.edu} \\
-  \monitorsymbol\quad\href{https://ss4s.substack.com}{Substack Newsletter} \\
-  \monitorsymbol\quad\href{https://mt.digital}{https://mt.digital} \\
+  {\large @}\hspace{0.5em}  \href{mailto:maturner@stanford.edu}{maturner@stanford.edu} \\
+  \monitorsymbol\quad\href{https://mat.phd}{https://mat.phd} \\
   \githubsymbol\quad\href{https://github.com/mt-digital}{mt-digital} \\
-  \Telefon\quad\texttt{+1 585 350 8649} 
+  \Telefon\quad\texttt{+1 585 350 8649}
 \end{minipage}
 \\[.75em]
 
@@ -123,9 +122,7 @@ Developed from scratch to introduce students to the computational technique
 of agent-based modeling, used extensively in models of social behavior for
 promoting sustainable practices and behavior. \lurl{https://explorecourses.stanford.edu/m_search?filter-coursestatus-Active=on&page=0&catalog=&q=EBS+182}
 
-\years{Winter '25 and '26}\emph{Computational Social Science for Sustainability}.
 \years{AY '25, '26}\emph{Computational Social Science for Sustainability}.
->>>>>>> c3140c895831e7ff19fc0134b622343e165634e9
 \textbf{Dept. of Environmental Social Sciences, Stanford University.}
 Developed from scratch to introduce quantitative social science theories
 and models. To support this, I created a novel framework that consolidates
@@ -195,7 +192,6 @@ science toolkit to help promote the diffusion of sustainable practices and behav
         \hyperlink{vwpaper}{Gregory, et al., 2020}, listed below). 
         Integrated contributions of faculty, graduate students,
         and other professional software developers. \\
-        \newpage
 \years{2012-2014}Data Engineer, 
       \emph{Economic Modeling Specialists Int'l}, Moscow, ID, USA.
       Ported legacy PHP code and SQL queries for large-scale 
@@ -203,6 +199,7 @@ science toolkit to help promote the diffusion of sustainable practices and behav
       and forecasting to the D programming language. 
       Developed novel approaches and applied best-practices to large-scale
       economic forecasts.
+
 
 % \hrule
 \section*{Grants, honors and awards}
@@ -331,6 +328,10 @@ Texas. \lurl{https://www.researchgate.net/publication/274720620_Experimental_and
 
 
 \subsection{Conference talks}
+
+    \textbf{Turner MA}, Reynolds AZ, Jones JH (2024). Group-level homophily in
+    metapopulation social networks can optimize the diffusion of innovations. 
+    Cultural Evolution Society 2024. Durham University, UK.
 
     \textbf{Turner MA}, Singleton AL, Harris MJ, Augusto Lopez C, Harryman I,
     Arthur RF, Muraida C, Jones JH (2023). Minority-group incubators and majority-group reservoirs for promoting the diffusion of climate change and public health adaptations. 45th Annual Meeting of the Cognitive Science Society.
